--- a/index.html
+++ b/index.html
@@ -3,17 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <title>Neighborhood Map</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css"
 </head>
 <body>
-    <ul id="cat-list"></ul>
-    <div id="cat">
-
-        <h2 id="cat-name"></h2>
-        <div id="cat-count"></div>
-        <img id="cat-img" src="" alt="cute cat">
-
+    <div class="row black">
+        <div class="col-sm-4 ">
+            <h4 data-bind="text: title"></h4>
+        </div>
+        <div class="col-sm-8"></div>
     </div>
+    <div class="row">
+        <div class="col-sm-4 black">
+            <form class="class="form-inline"">
+                <input type="text" class="form-control" id="filterLoc" placeholder="Place" />
+                <button type="submit">Filter</button>
+            </form>
+            <ul data-bind="foreach: locList" >
+                <li data-bind="text: $data">
+
+                </li>
+
+            </ul>
+        </div>
+        <div class="col-sm-8 Gmap">
+            <div id="map">
+
+            </div>
+
+        </div>
+    </div>
+
+
+    <ul id="loc-list"></ul>
     <script src="js/lib/knockout-3.2.0.js"></script>
+    <script src="js/model.js"></script>
     <script src="js/app.js"></script>
+    <script async defer
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCGt7RJ8LxRbHng5iCmT2n3LjbFuhPbg1g&v=3&callback=mapIni"
+    onerror="handelError()">
+      </script>
 </body>
 </html>
