Add FourSquare API

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <script src="js/lib/knockout-3.2.0.js"></script>
     <script src="js/model.js"></script>
     <script src="js/app.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script async defer
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCGt7RJ8LxRbHng5iCmT2n3LjbFuhPbg1g&v=3&callback=mapIni"
     onerror="handelError()">
