--- a/index.html
+++ b/index.html
@@ -1,48 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Neighborhood Map</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css"
+	<meta charset="UTF-8">
+	<meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
+	<title>Neighborhood Map</title>
+	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
+	<link href="css/style.css" rel="stylesheet">
 </head>
 <body>
-    <div class="row black">
-        <div class="col-sm-4 ">
-            <h4 data-bind="text: title"></h4>
-        </div>
-        <div class="col-sm-8"></div>
-    </div>
-    <div class="row">
-        <div class="col-sm-3 black">
-            <form class="form-inline" data-bind="submit: filter">
-                <input type="text" class="form-control"
-                data-bind="textInput: currentFilter" placeholder="Filter Place"  />
-                <button class="form-control" type="submit">Filter</button>
-            </form>
-            <ul id ="locUL" data-bind="foreach: filterList" >
-                <li data-bind="text: $data, click: $parent.clickMarker">
-                </li>
-            </ul>
-        </div>
-        <div class="col-sm-9 Gmap">
-            <div id="map">
-
-            </div>
-
-        </div>
-    </div>
-
-
-    <ul id="loc-list"></ul>
-    <script src="js/lib/knockout-3.2.0.js"></script>
-    <script src="js/model.js"></script>
-    <script src="js/app.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script async defer
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCGt7RJ8LxRbHng5iCmT2n3LjbFuhPbg1g&v=3&callback=mapIni"
-    onerror="handelError()"></script>
-
+	<div class="row black">
+		<div class="col-sm-4">
+			<h4 data-bind="text: title"></h4>
+		</div>
+		<div class="col-sm-8"></div>
+	</div>
+	<div class="row">
+		<div class="col-sm-3 black">
+			<form class="form-inline" data-bind="submit: filter">
+				<input class="form-control" data-bind="textInput: currentFilter" placeholder="Filter Place" type="text"> <button class="form-control" type="submit">Filter</button>
+			</form>
+			<ul data-bind="foreach: filterList" id="locUL">
+				<li data-bind="text: $data, click: $parent.clickMarker"></li>
+			</ul>
+		</div>
+		<div class="col-sm-9 Gmap">
+			<div id="map"></div>
+		</div>
+	</div>
+	<ul id="loc-list"></ul>
+	<script src="js/lib/knockout-3.2.0.js">
+	</script>
+	<script src="js/model.js">
+	</script>
+	<script src="js/app.js">
+	</script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">
+	</script>
+	<script async defer onerror="handelError()" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCGt7RJ8LxRbHng5iCmT2n3LjbFuhPbg1g&v=3&callback=mapIni">
+	</script>
 </body>
 </html>
